manifests/test/api-gateway/api-gateway.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-gateway
  namespace: journal--test
spec:
  type: ExternalName
  externalName: continuumtest--gateway.elife.internal
