manifests/test/api-gateway/app.yaml
apiVersion: kustomize.toolkit.fluxcd.io/v1
kind: Kustomization
metadata:
  name: api-gateway
  namespace: journal--test
spec:
  interval: 1m0s
  sourceRef:
    kind: GitRepository
    name: journal-team-deployment
    namespace: flux-system
  path: ./kustomizations/api-gateway
  prune: true
  targetNamespace: journal--test
  dependsOn:
  - name: api-gateway-consumer-keys
  - name: api-gateway-public-credentials
  images:
  - name: ghcr.io/elifesciences/api-raml-docs # {"$imagepolicy": "journal--test:api-raml-docs:name"}
    newTag: 2.35.0 # {"$imagepolicy": "journal--test:api-raml-docs:tag"}
  postBuild:
    substitute:
      env: test
      replicas: "2"
      # define services deployed in this namespace
      search_port: "80"
      search_service_name: search-web
      recommendations_port: "80"
      recommendations_service_name: recommendations-web
      digests_port: "9000"
      digests_service_name: digests-api
      # define services deployed in other namespaces
      metrics_hostname: data-hub-metrics-api--stg.data-hub
      metrics_port: "8000"
      metrics_protocol: http
      metrics_service_name: metrics-proxy
      # define services deployed elsewhere
      annotations_hostname: continuumtest--annotations.elife.internal
      annotations_port: "80"
      annotations_protocol: http
      annotations_service_name: annotations-proxy
      bioprotocol_hostname: continuumtest--bp.elife.internal
      bioprotocol_port: "80"
      bioprotocol_protocol: http
      bioprotocol_service_name: bioprotocol-proxy
      journal_cms_hostname: continuumtest--journal-cms.elife.internal
      journal_cms_port: "80"
      journal_cms_protocol: http
      journal_cms_service_name: journal-cms-proxy
      lax_hostname: continuumtest--lax.elifesciences.org
      lax_port: "443"
      lax_protocol: https
      lax_service_name: lax-proxy
      profiles_hostname: continuumtest--profiles.elife.internal
      profiles_port: "80"
      profiles_protocol: http
      profiles_service_name: profiles-proxy
      reviewed_preprints_service_name: reviewed-preprints-proxy
      reviewed_preprints_port: "443"
      reviewed_preprints_protocol: https
      reviewed_preprints_hostname: prod--epp-api.elifesciences.org
