manifests/test/api-gateway/automation.yaml
apiVersion: image.toolkit.fluxcd.io/v1beta2
kind: ImageUpdateAutomation
metadata:
  name: api-gateway
  namespace: journal--test
spec:
  interval: 5m
  sourceRef:
    kind: GitRepository
    name: journal-team-deployment
    namespace: flux-system
  update:
    strategy: Setters
    path: ./manifests/test/api-gateway
  git:
    commit:
      author:
        name: Fluxbot
        email: flux@elifesciences.org
      messageTemplate: |
        release({{ .AutomationObject }}): Automatic release

        Files:
        {{ range $filename, $_ := .Updated.Files -}}
        - {{ $filename }}
        {{ end -}}

        Objects:
        {{ range $resource, $_ := .Updated.Objects -}}
        - {{ $resource.Kind }} {{ $resource.Name }}
        {{ end -}}

        Images:
        {{ range .Updated.Images -}}
        - {{.}}
        {{ end -}}
