manifests/test/api-gateway/consumer-keys.yaml
apiVersion: kustomize.toolkit.fluxcd.io/v1
kind: Kustomization
metadata:
  name: api-gateway-consumer-keys
  namespace: journal--test
spec:
  interval: 1m0s
  sourceRef:
    kind: GitRepository
    name: journal-team-deployment
    namespace: flux-system
  path: ./kustomizations/api-gateway/consumer-keys
  prune: true
  targetNamespace: journal--test
