manifests/test/api-gateway/ingress.yaml
apiVersion: kustomize.toolkit.fluxcd.io/v1
kind: Kustomization
metadata:
  name: api-gateway-ingress
  namespace: journal--test
spec:
  interval: 1m0s
  sourceRef:
    kind: GitRepository
    name: journal-team-deployment
    namespace: flux-system
  path: ./kustomizations/api-gateway/ingress
  prune: true
  targetNamespace: journal--test
  postBuild:
    substitute:
      env: test
      search_service_name: search-web
