manifests/test/api-gateway/public-credentials.yaml
apiVersion: kustomize.toolkit.fluxcd.io/v1
kind: Kustomization
metadata:
  name: api-gateway-public-credentials
  namespace: journal--test
spec:
  interval: 1m0s
  sourceRef:
    kind: GitRepository
    name: journal-team-deployment
    namespace: flux-system
  path: ./kustomizations/api-gateway/public-credentials
  prune: true
  targetNamespace: journal--test
