manifests/test/api-gateway/search.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-gateway-search
  namespace: journal--test
spec:
  rules:
  - host: test--gateway.elifesciences.org
    http:
      paths:
      - path: /search
        pathType: ImplementationSpecific
        backend:
          service:
            name: search-web
            port:
              number: 80
